--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./styles/style.css">
     <title>HerreroGamer</title>
 </head>
@@ -13,28 +16,71 @@
     <h2 class="titulos" >EL HERRERO QUE TODO GAMER NECESITA</h2>
   
   </header>
-  <nav    class="nav">
-    <!-- Menú -->
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./paginas/Productos.html">Productos</a></li>
-            <li><a href="./paginas/clientes.html">Clientes</a></a></li>
-            <li><a href="./paginas/nosotros.html">Nosotros</a></li>
-            <LI><a href="./paginas/contacto.html">Conctacto</a></LI>
+  <nav class="navbar navbar-expand-lg bg-#0000">
+    <div id="burger"  class="container-fluid">
+      <a id="menu" class="navbar-brand text-light ;
+      " href="#">Menú</a>
+      <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav text-light" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav burger">
+          <li class="nav-item ">
+            <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/paginas/Productos.html">Productos</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="../paginas/clientes.html">Clientes</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="../paginas/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="/paginas/contacto.html">Contacto</a>
         </ul>
+      </div>
+    </div>
   </nav>
 
-  <article>
-  </br>
-    <h3 class="titulos h1 ">CARRUSEL</h3>
-    <img src="./image/Silla Sprinter.jpg" alt="SILLA GAMER" class="imageindex">
-
-  <p class="parrafon">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-    <!-- <section class="parallax" style="background-image: url(https://img.freepik.com/foto-gratis/corte-metal-equipo-plasma-planta_176420-4752.jpg?w=1380&t=st=1659416421~exp=1659417021~hmac=838e6e03cc136b1d0a9356e2b2af216826b1056801a761714c8169f1d2f00c97) ;"></section> -->
+  <article class="container">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./image/Silla Sprinter.jpg" class="d-block w-100 img-fluid"  alt="Silla Butaca de Sprinter">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+          <h2 class="titulos">SILLA GAMER PREMIUM</h2>
+          <p class="titulos">Silla gamer butaca de sprinter estrella de acero cromado.</p>
+        </div>
+        <div class="carousel-item">
+          <img src="./image/escritorio.png" class="d-block w-100 carrusel" alt="Escritorio con estructura de acero">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+          <h2 class="titulos">ESCRITORIO DE ACERO CON MADERA FENOLICO</h2>
+          <p class="titulos">Escritorio para oficina hecho a medida</p>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </article>
   
   <footer class="titulos h1 ">FOOTER</footer>
          
 
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
