--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Clientes</title>
 </head>
@@ -13,17 +14,33 @@
     <h2 class="titulos" >EL HERRERO QUE TODO GAMER NECESITA</h2>
     
 </header>
-<!-- Menú -->
-<nav    class="nav">
-<ul>
-    <li><a href="../index.html">Inicio</a></li>
-    <li><a href="./PRODUCTOS.html">Productos</a></li>
-    <li><a href="../paginas/clientes.html">Clientes</a></li>
-    <li><a href="../paginas/nosotros.html">Nosotros</a></li>
-    <LI><a href="./contacto.html">Conctacto</a></LI>
-</ul>
-</nav>
-
+<nav class="navbar navbar-expand-lg bg-#0000">
+    <div id="burger"  class="container-fluid">
+      <a id="menu" class="navbar-brand text-light ;
+      " href="#">Menú</a>
+      <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav text-light" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav burger">
+          <li class="nav-item ">
+            <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/paginas/Productos.html">Productos</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="../paginas/clientes.html">Clientes</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="../paginas/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link text-light" href="/paginas/contacto.html">Contacto</a>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <section class=" seco" >
 
     <h3 class="titulos ">CLIENTES</h3>
@@ -53,5 +70,6 @@
 
 <footer class="titulos h1">FOOTER</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
