--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -4,37 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Nosotros</title>
-    <body class="gridnosotros">
     </head>
-    <header class="header">
-        <h1 class="titulos h1">HERRERO GAMER</h1>
-        <h2 class="titulos" >EL HERRERO QUE TODO GAMER NECESITA</h2>
-    </header> 
-    <!-- Menú -->  
-         <nav class="nav">
-            <ul>
-               <li><a href="../index.html">Inicio</a></li>
-               <li><a href="./PRODUCTOS.html">Productos</a></li>
-               <li><a href="../paginas/clientes.html">Clientes</a></li>
-               <li><a href="../paginas/nosotros.html">Nosotros</a></li>
-               <LI><a href="./contacto.html">Conctacto</a></LI>
-            </ul>
-           </nav>
-<aside>
-<h1 class="titulos">NOSOTROS</h1>
+    <header class="container header">
+        <div class="row">
+          <img src="/image/Herrerogamer.jpg" class="col-4 logo" alt="Logo">
+          <h4 class="col-8 titulo">EL HERRERO QUE TODO GAMER NECESITA</h4>
+          <nav class="navbar navbar-expand-lg menu">
+            <div class="container-fluid">
+              <a class="navbar-brand">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav">
+                 <li class="nav-item">
+                   <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/paginas/Productos.html">Productos</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/paginas/clientes.html">Clientes</a>
+                 </li>
+                 <li class="nav-item">
+                  <a class="nav-link" href="/paginas/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/paginas/contacto.html">Contacto</a>
+                </li>
+               </ul>
+              </div>
+            </div>
+          </nav>
+      </div>
+      </header>
+      </br>
+      <body class="bodynosotros">
+<aside class="bodynosotros">
+<h1 class="titulo">NOSOTROS</h1>
 <article class="nosotros">
 <img id="nosotros" src="/image/Herrerogamer.jpg" alt="LOGO">
-<p class="parrafon">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+<p class="parrafo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 </article>
-</BR>
-</BR>
-</BR>
-</BR>
 </aside>
 
-<footer class="titulos h1">FOOTER</footer>
 
+<footer class="footer">
+</br>
+
+  <H2 class="footer">FOOTER</H2>
+</br>
+  <ul>
+    <li>
+      <a class="footer" href="#">INSTAGRAM</a>
+    </li>
+  </br>
+    <li>
+      <a class="footer" href="#">FACEBOOK</a>
+    </li>
+  </br>
+    <li>
+      <a class="footer" href="#">WHATSAPP</a>
+    </li>
+  </ul>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
