--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -4,54 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Clientes</title>
 </head>
-<body class="grid3">
-<header class="header">
-    <h1 class="titulos h1">HERRERO GAMER</h1>
-    <h2 class="titulos" >EL HERRERO QUE TODO GAMER NECESITA</h2>
-    
-</header>
-<!-- Menú -->
-<nav    class="nav">
-<ul>
-    <li><a href="../index.html">Inicio</a></li>
-    <li><a href="./PRODUCTOS.html">Productos</a></li>
-    <li><a href="../paginas/clientes.html">Clientes</a></li>
-    <li><a href="../paginas/nosotros.html">Nosotros</a></li>
-    <LI><a href="./contacto.html">Conctacto</a></LI>
-</ul>
-</nav>
+<header class="container header">
+    <div class="row">
+      <img src="/image/Herrerogamer.jpg" class="col-4 logo" alt="Logo">
+      <h4 class="col-8 titulo">EL HERRERO QUE TODO GAMER NECESITA</h4>
+      <nav class="navbar navbar-expand-lg menu">
+        <div class="container-fluid">
+          <a class="navbar-brand">Menu</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+           <ul class="navbar-nav">
+             <li class="nav-item">
+               <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="/paginas/Productos.html">Productos</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="/paginas/clientes.html">Clientes</a>
+             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/paginas/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/paginas/contacto.html">Contacto</a>
+            </li>
+           </ul>
+          </div>
+        </div>
+      </nav>
+  </div>
+    </header>
 
-<section class=" seco" >
+<body class="fondo" >
 
-    <h3 class="titulos ">CLIENTES</h3>
+    <h3 class="titulo">CLIENTES</h3>
+   <div class="cliente">
+    <img src="../image/Silla 4.jpg" class="img-fluid" alt="Silla Gamer">
+    </br>
+    <img src="../image/2 Sillas Rip.jpg" class="img-fluid" alt="Silla Gamer">
+    </br>
+    <img src="../image/Silla 3.jpg" class="img-fluid" alt="Silla Gamer">
+    </br>
+    <img src="../image/2 sillas rojas.jpg" class="img-fluid" alt="Silla Gamer"> 
+    </br>
+    <img src="../image/SILLA 2.jpg" class="img-fluid" alt="Silla Gamer"> 
+    </br>
+    <img src="/image/3 sillas.jpg" class="img-fluid" alt="Silla Gamer">
+    </br>
+    <img src="../image/Silla en interior.jpg" class="img-fluid" alt="Silla Gamer">  
+   </div>
 
-<div id="imagen1" class="Cliente">
-    <img src="../image/Silla 4.jpg" alt="Silla Gamer">  </div>
+    <footer class="footer">
+    </br>
+    <H2 class="footer">FOOTER</H2>
+    </br>
+     <ul>
+       <li>
+         <a class="footer" href="#">INSTAGRAM</a>
+       </li>
+       </br>
+       <li>
+         <a class="footer" href="#">FACEBOOK</a>
+       </li>
+       </br>
+       <li>
+         <a class="footer" href="#">WHATSAPP</a>
+       </li>
+     </ul>
+   </footer>
 
-<div id="imagen2" class="Cliente">
-    <img src="../image/2 Sillas Rip.jpg" alt="Silla Gamer"> </div>
-
-<div id="imagen3" class="Cliente">
-    <img src="../image/Silla 3.jpg" alt="Silla Gamer">  </div>
-
-<div id="imagen4" class="Cliente">
-    <img src="../image/2 sillas rojas.jpg" alt="Silla Gamer">  </div>
-
-<div id="imagen5" class="Cliente">
-    <img src="../image/SILLA 2.jpg" alt="Silla Gamer">  </div>
-
-<div id="imagen6" class="Cliente">
-    <img src="/image/3 sillas.jpg" alt="Silla Gamer">  </div>
-<div id="imagen7" class="Cliente">
-    <img src="../image/Silla en interior.jpg" alt="Silla Gamer">  </div>
-</section>
-
-
-
-<footer class="titulos h1">FOOTER</footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
