--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
             <a class="footer" href="#">WHATSAPP</a>
           </li>
         </ul>
+        <button>boton1</button>
+        <button>boton2</button>
+        <button>boton3</button>
       </footer>
 
   </div>
