--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
+    <meta name="description" content="Bienvenido a HerreroGamer justo lo que necesitaba tu SETUP GAMING">
+    <meta name="keywords" content="HERRERO, GAMER, SILLA, BUTACA, COMPUTACION, GAMING, SETUP">
     <title>HerreroGamer</title>
 </head>
 <header class="container header">
@@ -96,9 +98,9 @@
             <a class="footer" href="#">WHATSAPP</a>
           </li>
         </ul>
-        <button>boton1</button>
-        <button>boton2</button>
-        <button>boton3</button>
+        <button class="botones">boton1</button>
+        <button class="botones">boton2</button>
+        <button class="botones">boton3</button>
       </footer>
 
   </div>
