defini colores de fondo

--- a/paginas/clientes.html
+++ b/paginas/clientes.html
@@ -46,7 +46,7 @@
 
 <body class="fondo" >
 
-    <h3 class="titulo">CLIENTES</h3>
+    <h3 class="titulos">CLIENTES</h3>
    <div class="cliente">
     <img src="../image/Silla 4.jpg" class="img-fluid" alt="Silla Gamer">
     </br>
