--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -47,7 +47,7 @@
 <body class="fondo">
     <div class="bodynosotros">
     <aside class="asidenosotros">
-     <span class="span">NOSOTROS</span>
+     <h3 class="titulos">NOSOTROS</h3>
      </br>
      <article class="nosotros">
       </br>
