--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <meta name="description" content="Bienvenido a HerreroGamer justo lo que necesitaba tu SETUP GAMING">
-    <meta name="keywords" content="HERRERO, GAMER, SILLA, BUTACA, COMPUTACION, GAMING, SETUP">
+    <meta name="keywords" content="herrero, gamer, silla, butaca, computacion, gaming, setup">
     <title>HerreroGamer</title>
 </head>
-<header class="container header">
+<header class="container-fluid header">
   <div class="row">
     <img src="/image/Herrerogamer.jpg" class="col-4 logo" alt="Logo">
     <h4 class="col-8 titulo">EL HERRERO QUE TODO GAMER NECESITA</h4>
@@ -98,9 +98,7 @@
             <a class="footer" href="#">WHATSAPP</a>
           </li>
         </ul>
-        <button class="botones">boton1</button>
-        <button class="botones">boton2</button>
-        <button class="botones">boton3</button>
+
       </footer>
 
   </div>
