--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <meta name="description" content="Si tenes alguna consulta, contactate con nosotros">
-    <meta name="keywords" content="HERRERO, GAMER, SILLA, BUTACA, COMPUTACION, GAMING, SETUP">
+    <meta name="keywords" content="herrero, gamer, silla, butaca, computacion, gaming, setup">
     <title>Contacto</title>
 </head>
-<header class="container header">
+<header class="container-fluid header">
     <div class="row">
       <img src="/image/Herrerogamer.jpg" class="col-4 logo" alt="Logo">
       <h4 class="col-8 titulo">EL HERRERO QUE TODO GAMER NECESITA</h4>
@@ -68,11 +68,11 @@
          <br/>
          <br/>
          
-         <label for="tyc">Acepto terminos y condiciones</label>
+         <label class="tyc" for="tyc">Acepto terminos y condiciones</label>
          <input type="checkbox">
          <br/>
-         <input type="submit" value="Enviar">
-         <input type="reset" value="Borrar">
+         <input class="button" type="submit" value="Enviar">
+         <input class="button" type="reset" value="Borrar">
 
     </form>
 </div>
