--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
     <meta name="description" content="He aquí la historia de HerreroGamer y sus inicios">
-    <meta name="keywords" content="HERRERO, GAMER, SILLA, BUTACA, COMPUTACION, GAMING, SETUP">
+    <meta name="keywords" content="herrero, gamer, silla, butaca, computacion, gaming, setup">
     <title>Nosotros</title>
     </head>
-    <header class="container header">
+    <header class="container-fluid header">
         <div class="row">
           <img src="/image/Herrerogamer.jpg" class="col-4 logo" alt="Logo">
           <h4 class="col-8 titulo">EL HERRERO QUE TODO GAMER NECESITA</h4>
@@ -47,7 +47,7 @@
 <body class="fondo">
     <div class="bodynosotros">
     <aside class="asidenosotros">
-     <h3 class="titulos">NOSOTROS</h3>
+     <h3 class="titulo">NOSOTROS</h3>
      </br>
      <article class="nosotros">
       </br>
